@@ -52,13 +52,12 @@ class AppGenerator < Rails::Generator::Base
       m.template "helpers/application_helper.rb", "app/helpers/application_helper.rb"
       m.template "helpers/test_helper.rb",        "test/test_helper.rb"
 
-      # database.yml and .htaccess
+      # database.yml and routes.rb
       m.template "configs/databases/#{options[:db]}.yml", "config/database.yml", :assigns => {
         :app_name => @app_name,
         :socket   => options[:db] == "mysql" ? mysql_socket_location : nil
       }
-      m.template "configs/routes.rb",     "config/routes.rb"
-      m.template "configs/apache.conf",   "public/.htaccess"
+      m.template "configs/routes.rb", "config/routes.rb"
 
       # Initializers
       m.template "configs/initializers/inflections.rb", "config/initializers/inflections.rb"
